--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,12 @@ jobs:
   test:
     strategy:
       fail-fast: false
-      # matrix:
-      #   os: [ubuntu-latest, macos-latest]
-      #   # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
-      #   ruby: ['2.7', '3.0', '3.1', head, truffleruby, truffleruby-head]
-      os: macos-latest
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
+        ruby: ['2.7', '3.0', '3.1', head, truffleruby, truffleruby-head]
       ruby: '3.1'
-    # runs-on: ${{ matrix.os }}
-    runs-on: macos-latest
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
     - uses: ruby/setup-ruby@v1
