--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,4 @@ jobs:
     - uses: paambaati/codeclimate-action@v3.0.0
       with:
         debug: true
-        coverageLocations: coverage/.resultset.json:simplecov
+        coverageLocations: "${{github.workspace}}/coverage/.resultset.json:simplecov"
