--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest]
         # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
-        ruby: ['2.7', '3.0', '3.1', head, truffleruby, truffleruby-head]
+        ruby: ['2.7', '3.0', '3.1', head]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
