--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,4 @@ jobs:
       uses: paambaati/codeclimate-action@v3.0.0
       with:
         debug: true
+        coverageLocations: "${{github.workspace}}/coverage/coverage.json:simplecov"
