--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
   coverage:
     needs: [ test ]
     name: Publish Code Coverage
+    continue-on-error: true
     env:
       CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
     runs-on: ubuntu-latest
@@ -39,3 +40,4 @@ jobs:
       with:
         debug: true
         coverageLocations: "${{ github.workspace }}/coverage.json:simplecov"
+        prefix: "${{ github.workspace }}/lib"
