--- a/.github/workflows/swift-tests.yml
+++ b/.github/workflows/swift-tests.yml
@@ -6,7 +6,9 @@ jobs:
     steps:
     - uses: fwal/setup-swift@v1
     - uses: actions/checkout@v2
-    - name: Set Up Bundle
-      run: bundle install
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '3.1'
+        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Generate Swift Code & Run Tests
       run: bundle exec rake test_swift
