--- a/spec/fixtures/swift-tests.yml
+++ b/spec/fixtures/swift-tests.yml
@@ -2,6 +2,6 @@ import_name: 'MySecrets'
 namespace: 'MySecrets'
 pod_name: 'MySecrets'
 result_path: 'tests'
-swift_declaration_strategy: lazy_var
+swift_declaration_strategy: lazy var
 should_generate_unit_tests: true
 package_manager: spm
