--- a/spec/fixtures/arkana-fixture.yml
+++ b/spec/fixtures/arkana-fixture.yml
@@ -11,6 +11,8 @@ package_manager: cocoapods
 environments:
   - debug
   - release
+  - debugPlusMore
+  - ReleasePlusMore
 global_secrets:
   - Domain
   - Global
