Fix Swift compilation issue whe using Bool secrets.

--- a/spec/fixtures/.env.fruitloops
+++ b/spec/fixtures/.env.fruitloops
@@ -1,1 +1,5 @@
 DOTENV_KEY = "value from flavor dotenv"
+BoolAsStringTrueKey = "true"
+BoolAsStringFalseKey = "false"
+BoolAsBoolTrueKey = true
+BoolAsBoolFalseKey = false
