Add support to Int Swift type.

--- a/spec/fixtures/.env.fruitloops
+++ b/spec/fixtures/.env.fruitloops
@@ -3,3 +3,5 @@ BoolAsStringTrueKey = "true"
 BoolAsStringFalseKey = "false"
 BoolAsBoolTrueKey = true
 BoolAsBoolFalseKey = false
+IntAsStringKey = "42"
+IntAsNumberKey = 42
