Clarify usage of weird characters in general, and add more tests.

--- a/spec/fixtures/.env.fruitloops
+++ b/spec/fixtures/.env.fruitloops
@@ -10,3 +10,4 @@ SecretWithDollarSignEscapedAndDoubleQuoteKey = "real_\$lim_shady"
 SecretWithDollarSignNotEscapedAndSingleQuoteKey = 'real_$lim_shady'
 SecretWithDollarSignNotEscapedAndDoubleQuotesKey = "real_$lim_shady"
 SecretWithDollarSignNotEscapedAndNoQuotesKey = real_$lim_shady
+SecretWithWeirdCharactersKey = "` ~ ! @ # % ^ & * ( ) _ - + = { [ } } | : ; ' < , > . ? /"
