--- a/spec/fixtures/swift-tests.yml
+++ b/spec/fixtures/swift-tests.yml
@@ -17,3 +17,4 @@ global_secrets:
 - SecretWithDollarSignNotEscapedAndSingleQuoteKey
 - SecretWithDollarSignNotEscapedAndDoubleQuotesKey
 - SecretWithDollarSignNotEscapedAndNoQuotesKey
+- SecretWithWeirdCharactersKey
