Add feature to generate secrets only for select environments.

--- a/spec/fixtures/.env.fruitloops
+++ b/spec/fixtures/.env.fruitloops
@@ -11,3 +11,7 @@ SecretWithDollarSignNotEscapedAndSingleQuoteKey = 'real_$lim_shady'
 SecretWithDollarSignNotEscapedAndDoubleQuotesKey = "real_$lim_shady"
 SecretWithDollarSignNotEscapedAndNoQuotesKey = real_$lim_shady
 SecretWithWeirdCharactersKey = "` ~ ! @ # % ^ & * ( ) _ - + = { [ } } | : ; ' < , > . ? /"
+ServiceKeyDev = "this dev key is secret"
+ServerDev = "dev.example.com"
+ServiceKeyStaging = "this staging key is secret"
+ServerStaging = "staging.example.com"
