Handle values that look like numbers but should be treated as strings.

--- a/spec/fixtures/.env.fruitloops
+++ b/spec/fixtures/.env.fruitloops
@@ -5,6 +5,14 @@ BoolAsBoolTrueKey = true
 BoolAsBoolFalseKey = false
 IntAsStringKey = "42"
 IntAsNumberKey = 42
+IntWithLeadingZeroesAsStringKey = "0001"
+IntWithLeadingZeroesAsNumberKey = 0001
+MassiveIntAsStringKey = "92233720368547758079223372036854775807"
+MassiveIntAsNumberKey = 92233720368547758079223372036854775807
+NegativeIntAsStringKey = "-42"
+NegativeIntAsNumberKey = -42
+FloatAsStringKey = "3.14"
+FloatAsNumberKey = 3.14
 SecretWithDollarSignEscapedAndAndNoQuotesKey = real_\$lim_shady
 SecretWithDollarSignEscapedAndDoubleQuoteKey = "real_\$lim_shady"
 SecretWithDollarSignNotEscapedAndSingleQuoteKey = 'real_$lim_shady'
