--- a/template.yml
+++ b/template.yml
@@ -9,6 +9,9 @@ swift_declaration_strategy: let # Optional. One of: lazy var, var, let. Defaults
 should_generate_unit_tests: true # Optional. One of: true, false. Defaults to true.
 should_cocoapods_cross_import_modules: true # Optional. If false, the two generated cocoapods pods do not cross import (for manual import of the Sources folders), useful when building SDKs, for instance. One of: true, false. Defaults to true.
 package_manager: cocoapods # Optional. This setting defines which type of dependency management you're going ot use to integrate Arkana into your project. One of: spm, cocoapods. If you use both in your project, use cocoapods here. Defaults to spm.
+kotlin_package_name: 'com.tmrw.arkanakeys' # Optional. used by the Kotlin generator to determine the package name of the generated module. Defaults to com.arkanakeys.
+kotlin_sources_path: 'src/main/java' # Optional. used by the Kotlin generator to determine the path for generated kotlin classes. Defaults to src/main/kotlin.
+should_generate_gradle_build_file: true # Optional. used by the Kotlin generator to determine if a build.gradle file should be generated. Defaults to true.
 environments: # Optional. List of environments that will be used to generate secret keys when you have keys that are different between environments (e.g. debug/staging/prod). Defaults to empty.
   - Debug
   - Release
