--- a/template.yml
+++ b/template.yml
@@ -12,6 +12,7 @@ package_manager: cocoapods # Optional. This setting defines which type of depend
 kotlin_package_name: 'com.arkanakeys' # Optional. The package name of the generated Kotlin module. Defaults to com.arkanakeys.
 kotlin_sources_path: 'java' # Optional. The path for the generated Kotlin classes. Defaults to kotlin.
 should_generate_gradle_build_file: true # Optional. Whether a build.gradle file should be generated, when running the Kotlin generator. One of: true, false. Defaults to true.
+kotlin_jvm_toolchain_version: 11 # Optional. The kotlin JVM toolchain JDK version to be used in the generated build.gradle file. Defaults to 11.
 environments: # Optional. List of environments that will be used to generate secret keys when you have keys that are different between environments (e.g. debug/staging/prod). Defaults to empty.
   - Debug
   - Release
