--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,35 @@
 /spec/reports/
 /tmp/
 
-# rspec failure tracking
+# Rspec failure tracking
 .rspec_status
 coverage
 *.gem
 **/.DS_Store
+
+# Compiled Kotlin/Java class files
+*.class
+*.jar
+
+# IntelliJ IDEA files
+.idea/
+
+# Gradle files
+.gradle/
+build/
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Kotlin Native
+*.klib
+.konan/
