--- a/.github/workflows/swift-tests.yml
+++ b/.github/workflows/swift-tests.yml
@@ -9,6 +9,6 @@ jobs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.1'
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+        bundler-cache: true # Runs 'bundle install' and caches installed gems automatically
     - name: Generate Swift Code & Run Tests
       run: bundle exec rake test_swift
