--- a/.github/workflows/swift-tests.yml
+++ b/.github/workflows/swift-tests.yml
@@ -8,7 +8,6 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.3'
-        bundler-cache: false # Runs 'bundle install' and caches installed gems automatically
+        bundler-cache: true # Runs 'bundle install' and caches installed gems automatically
     - name: Generate Swift Code & Run Tests
       run: bundle exec rake test_swift
