--- a/.github/workflows/swift-tests.yml
+++ b/.github/workflows/swift-tests.yml
@@ -1,5 +1,9 @@
 name: Swift Tests
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request
 jobs:
   test:
     runs-on: macos-latest
